--- a/jet/src/jet.ui
+++ b/jet/src/jet.ui
@@ -585,7 +585,20 @@ Mode</string>
         <string>Manual</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="0" column="2">
+        <item row="1" column="1">
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="2" rowspan="2">
          <widget class="QFrame" name="frame_6">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
@@ -648,6 +661,19 @@ Mode</string>
           </layout>
          </widget>
         </item>
+        <item row="3" column="0">
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
         <item row="0" column="0">
          <widget class="QFrame" name="frame_3">
           <property name="frameShape">
@@ -657,32 +683,29 @@ Mode</string>
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
-           <item row="1" column="0">
-            <widget class="QPushButton" name="jog_plus_pb_0">
-             <property name="text">
-              <string>Jog X +</string>
+           <item row="0" column="0" colspan="3">
+            <widget class="QFrame" name="frame_5">
+             <property name="frameShape">
+              <enum>QFrame::StyledPanel</enum>
              </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QPushButton" name="jog_minus_pb_1">
-             <property name="text">
-              <string>Jog Y -</string>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
              </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QPushButton" name="jog_minus_pb_0">
-             <property name="text">
-              <string>Jog X -</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QPushButton" name="jog_plus_pb_1">
-             <property name="text">
-              <string>Jog Y +</string>
-             </property>
+             <layout class="QGridLayout" name="gridLayout_16">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_6">
+                <property name="text">
+                 <string>Jog Mode</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QComboBox" name="jog_modes_cb"/>
+              </item>
+             </layout>
             </widget>
            </item>
            <item row="1" column="2">
@@ -699,42 +722,44 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QComboBox" name="jog_modes_cb"/>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_6">
+           <item row="1" column="0">
+            <widget class="QPushButton" name="jog_plus_pb_0">
              <property name="text">
-              <string>Jog Mode</string>
+              <string>Jog X +</string>
              </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QPushButton" name="jog_minus_pb_1">
+             <property name="text">
+              <string>Jog Y -</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="jog_plus_pb_1">
+             <property name="text">
+              <string>Jog Y +</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QPushButton" name="jog_minus_pb_0">
+             <property name="text">
+              <string>Jog X -</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
-        <item row="2" column="0">
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="1" column="0">
-         <widget class="QGroupBox" name="groupBox">
-          <property name="title">
-           <string>Jog Velocity</string>
+         <widget class="QFrame" name="frame">
+          <property name="frameShape">
+           <enum>QFrame::Box</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="3">
+           <item row="0" column="4">
             <widget class="QLabel" name="label_11">
              <property name="text">
               <string>Max</string>
@@ -744,7 +769,7 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="3">
+           <item row="1" column="4">
             <widget class="QLabel" name="max_jog_vel_lb">
              <property name="text">
               <string>0</string>
@@ -754,27 +779,34 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="min_jog_vel_lb">
+           <item row="0" column="2" colspan="2">
+            <widget class="QLabel" name="label_7">
              <property name="text">
-              <string>0</string>
+              <string>Jog Velocity</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QLabel" name="label_9">
+           <item row="1" column="3">
+            <widget class="QLabel" name="jog_units_lb">
              <property name="text">
-              <string>Jog Velocity &gt;</string>
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLabel" name="jog_vel_lb">
+             <property name="text">
+              <string>0</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
+           <item row="0" column="1">
             <widget class="QLabel" name="label_10">
              <property name="text">
               <string>Min</string>
@@ -784,14 +816,17 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="2">
-            <widget class="QLabel" name="jog_vel_lb">
+           <item row="1" column="1">
+            <widget class="QLabel" name="min_jog_vel_lb">
              <property name="text">
               <string>0</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
             </widget>
            </item>
-           <item row="1" column="1" colspan="2">
+           <item row="2" column="1" colspan="4">
             <widget class="QSlider" name="jog_vel_s">
              <property name="maximum">
               <number>1000</number>
@@ -804,28 +839,8 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="3">
-            <widget class="QLabel" name="jog_units_lb">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
           </layout>
          </widget>
-        </item>
-        <item row="0" column="1">
-         <spacer name="horizontalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </widget>
