--- a/jet/src/jet.ui
+++ b/jet/src/jet.ui
@@ -268,7 +268,7 @@ Mode</string>
     <item row="4" column="0" colspan="6">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="gcode_tab">
        <attribute name="title">
@@ -489,35 +489,47 @@ Mode</string>
         </item>
         <item row="0" column="0">
          <widget class="QGroupBox" name="groupBox_6">
+          <property name="maximumSize">
+           <size>
+            <width>163</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="title">
-           <string>Tool Touch Off</string>
+           <string>Tool Touc h Off</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
           <layout class="QGridLayout" name="gridLayout_14">
-           <item row="0" column="0">
+           <item row="0" column="1">
             <widget class="QPushButton" name="tool_touchoff_x">
              <property name="text">
               <string>Touch Off X</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="tool_touchoff_y">
+           <item row="4" column="0">
+            <widget class="QLabel" name="Tool_no">
              <property name="text">
-              <string>Touch Off Y</string>
+              <string>Tool:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QPushButton" name="tool_touchoff_z">
+           <item row="3" column="1">
+            <widget class="QPushButton" name="tool_change_pb">
+             <property name="toolTip">
+              <string/>
+             </property>
+             <property name="toolTipDuration">
+              <number>-1</number>
+             </property>
              <property name="text">
-              <string>Touch Off Z</string>
+              <string>Toolchange</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
+           <item row="5" column="1">
             <widget class="QDoubleSpinBox" name="tool_touchoff_dsb">
              <property name="decimals">
               <number>3</number>
@@ -536,7 +548,7 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
+           <item row="6" column="1">
             <widget class="QPushButton" name="numberpad_pb_2">
              <property name="text">
               <string>Number Pad</string>
@@ -546,6 +558,51 @@ Mode</string>
              </property>
              <property name="type" stdset="0">
               <string>float</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="tool_touchoff_y">
+             <property name="text">
+              <string>Touch Off Y</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QDoubleSpinBox" name="tool_number_dsb">
+             <property name="minimumSize">
+              <size>
+               <width>99</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>99</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string/>
+             </property>
+             <property name="toolTipDuration">
+              <number>-1</number>
+             </property>
+             <property name="decimals">
+              <number>0</number>
+             </property>
+             <property name="maximum">
+              <double>999.000000000000000</double>
+             </property>
+             <property name="stepType">
+              <enum>QAbstractSpinBox::DefaultStepType</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QPushButton" name="tool_touchoff_z">
+             <property name="text">
+              <string>Touch Off Z</string>
              </property>
             </widget>
            </item>
@@ -585,20 +642,7 @@ Mode</string>
         <string>Manual</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="1" column="1">
-         <spacer name="horizontalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="2" rowspan="2">
+        <item row="0" column="2">
          <widget class="QFrame" name="frame_6">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
@@ -661,19 +705,6 @@ Mode</string>
           </layout>
          </widget>
         </item>
-        <item row="3" column="0">
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="0" column="0">
          <widget class="QFrame" name="frame_3">
           <property name="frameShape">
@@ -683,29 +714,32 @@ Mode</string>
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
-           <item row="0" column="0" colspan="3">
-            <widget class="QFrame" name="frame_5">
-             <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="jog_plus_pb_0">
+             <property name="text">
+              <string>Jog X +</string>
              </property>
-             <property name="frameShadow">
-              <enum>QFrame::Raised</enum>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QPushButton" name="jog_minus_pb_1">
+             <property name="text">
+              <string>Jog Y -</string>
              </property>
-             <layout class="QGridLayout" name="gridLayout_16">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_6">
-                <property name="text">
-                 <string>Jog Mode</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QComboBox" name="jog_modes_cb"/>
-              </item>
-             </layout>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QPushButton" name="jog_minus_pb_0">
+             <property name="text">
+              <string>Jog X -</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="jog_plus_pb_1">
+             <property name="text">
+              <string>Jog Y +</string>
+             </property>
             </widget>
            </item>
            <item row="1" column="2">
@@ -722,44 +756,42 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="jog_plus_pb_0">
-             <property name="text">
-              <string>Jog X +</string>
-             </property>
-            </widget>
+           <item row="0" column="1">
+            <widget class="QComboBox" name="jog_modes_cb"/>
            </item>
-           <item row="2" column="1">
-            <widget class="QPushButton" name="jog_minus_pb_1">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_6">
              <property name="text">
-              <string>Jog Y -</string>
+              <string>Jog Mode</string>
              </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QPushButton" name="jog_plus_pb_1">
-             <property name="text">
-              <string>Jog Y +</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QPushButton" name="jog_minus_pb_0">
-             <property name="text">
-              <string>Jog X -</string>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
+        <item row="2" column="0">
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
         <item row="1" column="0">
-         <widget class="QFrame" name="frame">
-          <property name="frameShape">
-           <enum>QFrame::Box</enum>
+         <widget class="QGroupBox" name="groupBox">
+          <property name="title">
+           <string>Jog Velocity</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="4">
+           <item row="0" column="3">
             <widget class="QLabel" name="label_11">
              <property name="text">
               <string>Max</string>
@@ -769,7 +801,7 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="4">
+           <item row="1" column="3">
             <widget class="QLabel" name="max_jog_vel_lb">
              <property name="text">
               <string>0</string>
@@ -779,44 +811,17 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="2" colspan="2">
-            <widget class="QLabel" name="label_7">
-             <property name="text">
-              <string>Jog Velocity</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="3">
-            <widget class="QLabel" name="jog_units_lb">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="2">
-            <widget class="QLabel" name="jog_vel_lb">
-             <property name="text">
-              <string>0</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>Min</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="1">
+            <widget class="QSlider" name="jog_vel_s">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="tickPosition">
+              <enum>QSlider::TicksBelow</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
             <widget class="QLabel" name="min_jog_vel_lb">
              <property name="text">
               <string>0</string>
@@ -826,21 +831,48 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1" colspan="4">
-            <widget class="QSlider" name="jog_vel_s">
-             <property name="maximum">
-              <number>1000</number>
+           <item row="2" column="1">
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>Jog Velocity &gt;</string>
              </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
-             <property name="tickPosition">
-              <enum>QSlider::NoTicks</enum>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Min</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLabel" name="jog_vel_lb">
+             <property name="text">
+              <string>0</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
